--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'agency.tango.android:material-intro-screen:0.0.5'
+    compile 'uk.co.chrisjenx:calligraphy:2.3.0'
 
     implementation 'com.android.support:recyclerview-v7:26.+'
     implementation 'com.android.support:cardview-v7:26.+'
