--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+    }
     compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
@@ -16,11 +18,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+        }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -36,9 +40,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:11.8.0'
     compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
     testCompile 'junit:junit:4.12'
-
     compile 'agency.tango.android:material-intro-screen:0.0.5'
-
     implementation 'com.android.support:recyclerview-v7:26.+'
     implementation 'com.android.support:cardview-v7:26.+'
 }
