--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -43,6 +44,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.+'
     implementation 'com.android.support:cardview-v7:26.+'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
